<?xml version="1.0"?>
<package>
  <!-- Package Metadata -->
  <name>grpc</name>
  <version>1.34.0</version>
  <description>Remote Procedure Calls (RPCs) provide a useful abstraction for building distributed applications and services. The libraries in this repository provide a concrete implementation of the gRPC protocol, layered over HTTP/2. These libraries enable communication between clients and servers using any combination of the supported languages.

This repository adds catkin build support for gRPC Core 1.34.0.
  </description>

  <maintainer email="elvis.dowson@gmail.com">Elvis Dowson</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/edowson/grpc</url>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>protobuf</build_depend>

  <run_depend>protobuf</run_depend>

</package>
